--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 include_directories("${PROJECT_SOURCE_DIR}/include")
-include_directories("${PROJECT_SOURCE_DIR}/appzone/include")
+include_directories("${PROJECT_SOURCE_DIR}/appznd/include")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 set(ZR_HEADER_FILES
@@ -17,5 +17,5 @@ set(ZROCKS "zrocks")
 
 add_library(${ZROCKS} STATIC ${ZR_HEADER_FILES} ${ZR_SOURCE_FILES})
 target_link_libraries ( ${ZROCKS} ${LXAPP} )
-target_link_libraries ( ${ZROCKS} znd-media )
+target_link_libraries ( ${ZROCKS} ${APPZND} )
 set_target_properties(${ZROCKS} PROPERTIES OUTPUT_NAME ${ZROCKS})
