media: Asynchronous context functions and tests
Signed-off-by: Ivan L. Picoli <i.picoli@samsung.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,10 @@ include_directories("${PROJECT_SOURCE_DIR}/targets/include")
 
 ### XAPP Tests ###
 
+set(TEST_HEADER_FILES
+    ${PROJECT_SOURCE_DIR}/include/xapp.h
+)
+
 set(TEST_SOURCE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/test-media-layer.c
 )
@@ -13,7 +17,7 @@ set(TEST_SOURCE_FILES
 foreach(SRC_FN ${TEST_SOURCE_FILES})
     get_filename_component(SRC_FN_WE ${SRC_FN} NAME_WE)
     set(EXE_FN "xapp-${SRC_FN_WE}")
-    add_executable(${EXE_FN} ${SRC_FN})
+    add_executable(${EXE_FN} ${TEST_HEADER_FILES} ${SRC_FN})
     target_link_libraries ( ${EXE_FN} ${LXAPP} )
     target_link_libraries ( ${EXE_FN} cunit )
 endforeach()
@@ -28,7 +32,7 @@ set(TEST_ZND_SRC_FILES
 foreach(SRC_FN ${TEST_ZND_SRC_FILES})
     get_filename_component(SRC_FN_WE ${SRC_FN} NAME_WE)
     set(EXE_FN "appznd-${SRC_FN_WE}")
-    add_executable(${EXE_FN} ${SRC_FN})
+    add_executable(${EXE_FN} ${TEST_HEADER_FILES} ${SRC_FN})
     target_link_libraries ( ${EXE_FN} ${LXAPP} )
     target_link_libraries ( ${EXE_FN} appznd )
     target_link_libraries ( ${EXE_FN} cunit )
