media: bug fixes and improvements
Signed-off-by: Ivan L. Picoli <i.picoli@samsung.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ endforeach()
 set(TEST_ZND_SRC_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/test-znd-media.c
     ${CMAKE_CURRENT_SOURCE_DIR}/test-mempool.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/test-append-mthread.c
 )
 
 foreach(SRC_FN ${TEST_ZND_SRC_FILES})
