xztl: provisioning + project name refactoring
Signed-off-by: Ivan L. Picoli <i.picoli@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(XAPP_VERSION_MINOR 0)
 set(XAPP_VERSION_PATCH 1)
 set(XAPP_VERSION "${XAPP_VERSION_MAJOR}.${XAPP_VERSION_MINOR}.${XAPP_VERSION_PATCH}")
 
-project(libxapp C)
+project(libztl C)
 include(FeatureSummary)
 include(use_c11)
 include(CheckLibraryExists)
@@ -17,7 +17,7 @@ add_definitions(-DXAPP_VERSION_MAJOR=${XAPP_VERSION_MAJOR})
 add_definitions(-DXAPP_VERSION_MINOR=${XAPP_VERSION_MINOR})
 add_definitions(-DXAPP_VERSION_PATCH=${XAPP_VERSION_PATCH})
 add_definitions(-DXAPP_VERSION=${XAPP_VERSION})
-add_definitions(-DXAPP_LABEL="libxapp: Application-specific FTL Development Library")
+add_definitions(-DXAPP_LABEL="libztl: User-space Zone Translation Layer Library")
 
 use_c11()
 enable_c_flag("-std=c11")
@@ -32,6 +32,7 @@ set(HEADER_FILES
     ${PROJECT_SOURCE_DIR}/include/xapp.h
     ${PROJECT_SOURCE_DIR}/include/xapp-media.h
     ${PROJECT_SOURCE_DIR}/include/xapp-mempool.h
+    ${PROJECT_SOURCE_DIR}/include/xapp-ztl.h
 )
 
 ### XAPP CORE ###
@@ -51,6 +52,6 @@ set(LXAPP "xapp")
 add_library(${LXAPP} STATIC ${HEADER_FILES} ${SOURCE_FILES})
 set_target_properties(${LXAPP} PROPERTIES OUTPUT_NAME ${LXAPP})
 
-add_subdirectory(appznd)
+add_subdirectory(lztl)
 add_subdirectory(targets)
 add_subdirectory(tests)
