--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 include_directories("${PROJECT_SOURCE_DIR}/include")
-include_directories("${PROJECT_SOURCE_DIR}/appznd/include")
+include_directories("${PROJECT_SOURCE_DIR}/lztl/include")
 include_directories("${PROJECT_SOURCE_DIR}/targets/include")
 
 ### XAPP Tests ###
@@ -22,7 +22,7 @@ foreach(SRC_FN ${TEST_SOURCE_FILES})
     target_link_libraries ( ${EXE_FN} cunit )
 endforeach()
 
-### App Zoned Tests ###
+### libztl Tests ###
 
 set(TEST_ZND_SRC_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/test-znd-media.c
@@ -32,10 +32,10 @@ set(TEST_ZND_SRC_FILES
 
 foreach(SRC_FN ${TEST_ZND_SRC_FILES})
     get_filename_component(SRC_FN_WE ${SRC_FN} NAME_WE)
-    set(EXE_FN "appznd-${SRC_FN_WE}")
+    set(EXE_FN "lztl-${SRC_FN_WE}")
     add_executable(${EXE_FN} ${TEST_HEADER_FILES} ${SRC_FN})
     target_link_libraries ( ${EXE_FN} ${LXAPP} )
-    target_link_libraries ( ${EXE_FN} appznd )
+    target_link_libraries ( ${EXE_FN} libztl )
     target_link_libraries ( ${EXE_FN} cunit )
     target_link_libraries ( ${EXE_FN} xnvme )
     target_link_libraries ( ${EXE_FN} pthread )
