--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,7 +35,7 @@ foreach(SRC_FN ${TEST_ZND_SRC_FILES})
     set(EXE_FN "lztl-${SRC_FN_WE}")
     add_executable(${EXE_FN} ${TEST_HEADER_FILES} ${SRC_FN})
     target_link_libraries ( ${EXE_FN} ${LXAPP} )
-    target_link_libraries ( ${EXE_FN} libztl )
+    target_link_libraries ( ${EXE_FN} ztl )
     target_link_libraries ( ${EXE_FN} cunit )
     target_link_libraries ( ${EXE_FN} xnvme )
     target_link_libraries ( ${EXE_FN} pthread )
