--- a/lztl/CMakeLists.txt
+++ b/lztl/CMakeLists.txt
@@ -14,6 +14,7 @@ set(ZND_SOURCE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/ztl-pro.c
     ${CMAKE_CURRENT_SOURCE_DIR}/src/ztl-pro-grp.c
     ${CMAKE_CURRENT_SOURCE_DIR}/src/ztl-mpe.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/ztl-map.c
 )
 
 set(LIBZTL "ztl")
