ZRocks first release
- Library compatible with xnvme 0.0.7
- Merge libraries dynamically and install libzrocks.a in the system
- Added device name as parameter in zrocks

Signed-off-by: Ivan L. Picoli <i.picoli@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,3 +61,4 @@ install(TARGETS ${LXAPP} DESTINATION lib COMPONENT lib)
 add_subdirectory(lztl)
 add_subdirectory(targets)
 add_subdirectory(tests)
+add_subdirectory(scripts)
