--- a/ztl-tgt-zrocks/CMakeLists.txt
+++ b/ztl-tgt-zrocks/CMakeLists.txt
@@ -25,6 +25,7 @@ enable_c_flag("-std=c11")
 enable_c_flag("-Wall")
 enable_c_flag("-pedantic")
 enable_c_flag("-fopenmp")
+#enable_c_flag("-g")
 
 set(HEADER_FILES
 	${PROJECT_SOURCE_DIR}/include/libzrocks.h
