cmake: allow compilation against xnvme with non-bundled system deps
Signed-off-by: Klaus Jensen <k.jensen@samsung.com>
Signed-off-by: Ivan L. Picoli <i.picoli@samsung.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -28,7 +28,7 @@ foreach(SRC_FN ${XAPP_TESTS})
     get_filename_component(SRC_FN_WE ${SRC_FN} NAME_WE)
     set(EXE_FN "xapp-${SRC_FN_WE}")
     add_executable(${EXE_FN} ${SRC_FN})
-    target_link_libraries ( ${EXE_FN} cunit )
+    target_link_libraries ( ${EXE_FN} cunit rt numa uuid)
     target_link_libraries ( ${EXE_FN} xapp )
 endforeach()
 
@@ -42,7 +42,7 @@ foreach(SRC_FN ${ZTL_TESTS})
     get_filename_component(SRC_FN_WE ${SRC_FN} NAME_WE)
     set(EXE_FN "lztl-${SRC_FN_WE}")
     add_executable(${EXE_FN} ${SRC_FN})
-    target_link_libraries ( ${EXE_FN} cunit )
+    target_link_libraries ( ${EXE_FN} cunit rt numa uuid)
     target_link_libraries ( ${EXE_FN} pthread )
     target_link_libraries ( ${EXE_FN} ztl )
 endforeach()
@@ -54,7 +54,7 @@ foreach(SRC_FN ${ZTL_TESTS})
     get_filename_component(SRC_FN_WE ${SRC_FN} NAME_WE)
     set(EXE_FN "zrocks-${SRC_FN_WE}")
     add_executable(${EXE_FN} ${SRC_FN})
-    target_link_libraries ( ${EXE_FN} cunit )
+    target_link_libraries ( ${EXE_FN} cunit rt numa uuid)
     target_link_libraries ( ${EXE_FN} pthread )
     target_link_libraries ( ${EXE_FN} zrocks )
 endforeach()
