tests: Added link to libaio
Signed-off-by: Ivan L. Picoli <i.picoli@samsung.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -67,6 +67,7 @@ foreach(SRC_FN ${ZROCKS_TESTS})
     target_link_libraries(${EXE_FN} -Wl,--no-as-needed)
     target_link_libraries ( ${EXE_FN} cunit rt uuid numa pthread)
     target_link_libraries ( ${EXE_FN} zrocks )
+    target_link_libraries ( ${EXE_FN} aio )
     target_link_libraries(${EXE_FN} -Wl,--no-whole-archive)
     target_link_libraries(${EXE_FN} -Wl,--as-needed)
 endforeach()
