--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,7 +44,7 @@ foreach(SRC_FN ${ZTL_TESTS})
 
     target_link_libraries(${EXE_FN} -Wl,--whole-archive)
     target_link_libraries(${EXE_FN} -Wl,--no-as-needed)
-    target_link_libraries ( ${EXE_FN} cunit rt uuid numa pthread)
+    target_link_libraries ( ${EXE_FN} cunit rt uuid numa pthread aio)
     target_link_libraries ( ${EXE_FN} ztl )
     target_link_libraries(${EXE_FN} -Wl,--no-whole-archive)
     target_link_libraries(${EXE_FN} -Wl,--as-needed)
@@ -68,9 +68,8 @@ foreach(SRC_FN ${ZROCKS_TESTS})
 
     target_link_libraries(${EXE_FN} -Wl,--whole-archive)
     target_link_libraries(${EXE_FN} -Wl,--no-as-needed)
-    target_link_libraries ( ${EXE_FN} cunit rt uuid numa pthread)
+    target_link_libraries ( ${EXE_FN} cunit rt uuid numa pthread aio)
     target_link_libraries ( ${EXE_FN} zrocks )
-    target_link_libraries ( ${EXE_FN} aio )
     target_link_libraries(${EXE_FN} -Wl,--no-whole-archive)
     target_link_libraries(${EXE_FN} -Wl,--as-needed)
 endforeach()
