Add zone group feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ enable_c_flag("-Wall")
 enable_c_flag("-pedantic")
 enable_c_flag("-fopenmp")
 enable_c_flag("-fPIC")
-#enable_c_flag("-g")
+enable_c_flag("-g")
 
 set(HEADER_FILES
     ${PROJECT_SOURCE_DIR}/include/xztl.h
